2025-02-03T00:46:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104142592 # 554
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 396 1366 / 400 1376
* notice: next accum: outdated-unq outdated-all / unq all: 397 1367 / 400 1376
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-01-19] / []

2025-01-27T00:45:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12979943047 # 547
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-27
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 396 1366 / 399 1369
* notice: next accum: outdated-unq outdated-all / unq all: 396 1366 / 400 1376
* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -0 -0 / +1 +7 -0 -0 / 1 7
* notice: removed / changed dates: [] / [2025-01-26]

2025-01-25T00:42:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12960068627 # 545
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-25
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 396 1366 / 398 1368
* notice: next accum: outdated-unq outdated-all / unq all: 396 1366 / 399 1369
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-24]

2025-01-23T00:44:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12919870210 # 543