@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-03T00:46:02Z",
+  "timestamp" : "2025-02-04T00:44:41Z",
   "count_outdated" : 1367,
   "uniques_outdated" : 397,
-  "count" : 1376,
-  "uniques" : 400,
+  "count" : 1378,
+  "uniques" : 401,
   "views" : [
     {
       "timestamp": "2025-01-22T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 7,
       "count_minmax": [ 7, 7 ],
       "count_decinc": [ 0, 7 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
