@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 11,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2025-01-22T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2025-01-26T00:00:00Z",
       "count": 7,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-03T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
