@@ -1,3 +1,12 @@
+2025-02-04T00:44:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13125876574 # 555
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 397 1367 / 400 1376
+* notice: next accum: outdated-unq outdated-all / unq all: 397 1367 / 401 1378
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2025-02-03]
+
 2025-02-03T00:46:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104142592 # 554
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
